<resources>
    <string name="app_name">Robots</string>
    <string name="connexion">Connexion</string>
    <string name="email">Courriel</string>
    <string name="password">Mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="remember_me">Se souvenir de moi</string>
    <string name="account">Mon compte</string>
    <string name="jamal">Jamal</string>
    <string name="car_name">The DawgMobile</string>
    <string name="action_name">Action Name</string>
    <string name="modes">Modes</string>
</resources>