<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="112dp"
        android:layout_height="30dp"
        android:src="@drawable/robots_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/login_h1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/museomoderno_medium"
        android:gravity="center|start"
        android:text="@string/connexion"
        android:textColor="@color/accent"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/off_black"
            android:textColorHint="@color/black40" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/off_black"
            android:textColorHint="@color/black40" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            android:padding="16dp"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>