<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".Fragments.JamalFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/robots_logo" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/jamal_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/user_icon"
            android:contentDescription="@string/account" />

    </LinearLayout>

    <TextView
        android:id="@+id/jamal_h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:letterSpacing="-.03"
        android:lineHeight="40dp"
        android:text="@string/jamal"
        android:textColor="@color/off_black"
        android:textSize="45sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/toDawg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/grey_button_bg"
            android:src="@drawable/car_filled" />

        <ImageButton
            android:id="@+id/toJamal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:src="@drawable/dog_white" />
    </LinearLayout>

</LinearLayout>