<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".Fragments.JamalFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/robots_logo" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/user_icon"
            android:contentDescription="@string/account" />

    </LinearLayout>

    <TextView
        android:id="@+id/jamal_h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:letterSpacing="-.03"
        android:lineHeight="40dp"
        android:text="@string/car_name"
        android:textColor="@color/off_black"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/grey_button_bg"
                android:src="@drawable/rot_left" />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/grey_button_bg"
                android:src="@drawable/rot_right" />
        </LinearLayout>

        <com.semisoft.robots.Utils.SquareLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/grey_button_bg"
                    android:src="@drawable/north_west" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:src="@drawable/north" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/grey_button_bg"
                    android:src="@drawable/north_east" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:src="@drawable/west" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="35dp"
                    android:src="@drawable/center" />

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:src="@drawable/east" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grey_button_bg"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/grey_button_bg"
                    android:src="@drawable/south_west" />

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:src="@drawable/south" />

                <ImageButton
                    android:id="@+id/imageButton10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/grey_button_bg"
                    android:src="@drawable/south_east" />
            </LinearLayout>
        </com.semisoft.robots.Utils.SquareLinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:src="@drawable/car_white" />

        <ImageButton
            android:id="@+id/toJamal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/grey_button_bg"
            android:src="@drawable/dog_filled" />
    </LinearLayout>

</LinearLayout>